--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -105,6 +105,10 @@ jobs:
 
     - name: Building recovery
       run: |
+       sed -i '/TW_OZIP_DECRYPT_KEY/a\    TW_NO_FASTBOOT_BOOT \\' vendor/twrp/soong/makevars.mk ;
+       sed -i '/BOARD_USES_RECOVERY_AS_BOOT/a\  ifneq ($(TW_NO_FASTBOOT_BOOT),true)' vendor/twrp/config/BoardConfigTWRP.mk ;
+       sed -i 's/^endif/  endif/' vendor/twrp/config/BoardConfigTWRP.mk ;
+       sed -i '$ i\endif' vendor/twrp/config/BoardConfigTWRP.mk ;
         cd ${{ steps.pwd.outputs.workspace-folder }}/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
         set +e
         source build/envsetup.sh
